Extended garage appointment operations with startTime and endTime